WIP legend label

--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
       <div class="col-lg-7">
         <!--barChart legend-->
         <div class="row">
-          <div id="barChartLegend">Protocol
+          <div id="barChartLegendLabel">Protocol</div>
+          <div id="barChartLegend">
             <svg></svg>
           </div>
         </div>
