--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
       <div class="col-lg-7">
         <!--barChart legend-->
         <div class="row">
-          <div id="barChartLegendLabel">Protocol</div>
-          <div id="barChartLegend">
+          <div id="barChartLegendLabel" class="col-lg-2">Protocol</div>
+          <div id="barChartLegend"class="col-lg-10">
             <svg></svg>
           </div>
         </div>
