--- a/index.html
+++ b/index.html
@@ -227,15 +227,14 @@ d3.select("#reorderButton")
     emissionsBarChart("groupLatinAmer", "#barChart_LatinAmer");
     emissionsBarChart("groupNordic", "#barChart_Nordic");
      
-  });
-  // .on("mouseover", function () {
-  //   console.log("mouseover")
-  //   div.style("opacity", .9);    
-  //           div .html("helloooo")  
-  //               .style("left", (d3.event.pageX) + "px")   
-  //               .style("top", (d3.event.pageY - 28) + "px");  
-
-  // });
+  })
+  .on("mouseover", function () {
+    div.style("opacity", 1);
+    div.html("Re-order cities according to decreasing emissions <b>per capita</b>.")  
+        .style("left", 800 + "px")
+        .style("top", 144 + "px");
+  })
+  .on("mouseout", function () { div.style("opacity", 0); });
 
 // // Map reset button
 // d3.select("#resetButton")
