--- a/index.html
+++ b/index.html
@@ -723,38 +723,9 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
 
   // Plot regional avg emissions [tCO2/capita] as a line over each barChart
   var regionalVar = this_dim === "Scope1/capita" ? regionalAvgs : regionalAvgs_GDP;
+  fn_appendRegionalMeans(svgBarChart, this_dim, x, y);
 
-  svgBarChart.append("g").selectAll("line")
-    .data(Object.values(regionalVar))
-    .enter().append("line")
-    .attr("class", "line")
-    .style("stroke", "#555")
-    .style("stroke-width", "2px")
-    .attr("x1", function (d, i) {
-      if (this_dim === "Scope1/capita") {
-        if (i === 0) return x("Rotterdam");
-        else if (i === 1) return x("Buenos Aires");
-        else if (i === 2) return x("Cleveland");
-        else if (i === 3) return x("Incheon");
-        else if (i === 4) return x("Lahti");
-      } else {
-        if (i === 0) return x("Manchester");
-        else if (i === 1) return x("Caracas");
-        else if (i === 2) return x("Auckland");
-        else if (i === 3) return x("Lagos");
-        else if (i === 4) return x("Helsinki");
-      }
-    })
-    .attr("y1", function (d, i) { return y(d); })
-    .attr("x2", function (d, i) {
-      if (i === 0) return x("Faro");
-      else if (i === 1) return x("Recife");
-      else if (i === 2) return x("Ajax, ON");
-      else if (i === 3) return x("Okayama");
-      else if (i === 4) return x("Turku");
-    })
-    .attr("y2", function (d, i) { return y(d); });
-        
+  
   //       // Legend line + text
   //       regionalLine = svgBarChart.append("g");
   //       regionalLine.selectAll("line")
