--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- row 4 -->
     <div class="row">
 
-      <div class="col-lg-7" style="border: 2px #555;">
+      <div class="col-lg-7">
         <!--barChart legend-->
         <div class="row">
           <div id="barChartLegendLabel" class="col-lg-2">Protocol</div>
