--- a/index.html
+++ b/index.html
@@ -693,11 +693,11 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
 
         //tooltip x and y posn shifts
         var tipx = 0;
-        var tipy = -1230;
-        if (geogroup_name === "groupEurope") tipy = -1154;
-        else if (geogroup_name === "groupLatinAmer") tipy = -1280;
-        else if (geogroup_name === "groupUSAAusNZ") tipy = -1200;
-        else if (geogroup_name === "groupNordic") tipy = -1300;
+        var tipy = -1560; //africa/asia
+        if (geogroup_name === "groupEurope") tipy = -1490;
+        else if (geogroup_name === "groupLatinAmer") tipy = -1600;
+        else if (geogroup_name === "groupUSAAusNZ") tipy = -1540;
+        else if (geogroup_name === "groupNordic") tipy = -1660;
         div.style("opacity", 1);
         div.html(formatDecimalSci(d[this_dim]) + " " + dimUnits[this_dim])
           .style("left", d3.event.pageX + tipx + "px")
