--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </ul>
       </div>
 
-      <div class="col-lg-5" id="cityCardTitle" style="text-align: left;">City Progress</div>
+      <div class="col-lg-5" id="cityCardTitle" style="text-align: left;">Recent emission changes from city reports </div>
     </div> <!-- ./row 3 -->
 
     <!-- row 4 -->
@@ -176,8 +176,8 @@ d3.select("#gdpButton")
   .on("click", function() {
     div.style("opacity", 0); //clear tooltip
     
-    var buttonText = (d3.select(this).text() === "Scope1/GDP-PPP") ?
-                      "Scope1/capita" : "Scope1/GDP-PPP";              
+    var buttonText = (d3.select(this).text() === label_dataPerGDP) ?
+                      label_dataPerCap : label_dataPerGDP;
 
     d3.select(this).text(buttonText);
 
@@ -188,8 +188,8 @@ d3.select("#gdpButton")
     emissionsBarChart("groupLatinAmer", "#barChart_LatinAmer");
     emissionsBarChart("groupNordic", "#barChart_Nordic");
 
-    //(de-)activate reorder button if ("Scope1/capita")"Scope1/GDP-PPP" is being displayed
-    var reorderState = (buttonText === "Scope1/capita") ? "block" : "none";
+    //(de-)activate reorder button if "Scope1/capita" is being displayed
+    var reorderState = (buttonText === label_dataPerCap) ? "block" : "none";
     d3.select("#reorderButton").style("display", reorderState);
      
   })
@@ -508,10 +508,16 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
   d3.select(geogroup_id).select("svg").remove();
   
   // barChart caption in #barChartCaption div
-  this_dim = (d3.select("#gdpButton").text() === "Scope1/GDP-PPP") ?
-                      "Scope1/capita" : "Scope1/GDP-PPP";
-  d3.select("#barChartCaption").text(this_dim + " " + dimUnits[this_dim]
-    + " emissions grouped by world region");
+  this_dim = (d3.select("#gdpButton").text() === label_dataPerGDP) ?
+                      label_dataPerCap : label_dataPerGDP;
+  // d3.select("#barChartCaption").text(this_dim + " " + dimUnits[this_dim]
+  //   + " emissions grouped by world region");
+  if (this_dim === label_dataPerCap) {
+    d3.select("#barChartCaption").text("Per capita emissions " + dimUnits[this_dim]);
+  } else {
+    d3.select("#barChartCaption").text("Emissions per unit of Gross Domestic Product " 
+      + dimUnits[this_dim]);
+  }
 
   //https://bl.ocks.org/seemantk/ec245e1f4e824e685982dd5d3fbb2fcc
   var margin = {top: 5, right: 20, bottom: 40, left: 40},
@@ -546,7 +552,7 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
     // .ticks(10, "%");
     .ticks(5)
     .tickFormat(function(d) {
-      return this_dim === 'Scope1/GDP-PPP' ? formatDecimalk(d) : d;
+      return this_dim === label_dataPerGDP ? formatDecimalk(d) : d;
     })
     .tickPadding(2);
 
