'per GDP' label

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="col-lg-7">
         <div id="barChartCaption"></div>
           <ul class="nytg-sort" id="emissionsToggleButton">
-              <li id="gdpButton">Scope1/GDP-PPP</li>
+              <li id="gdpButton">per GDP</li>
           </ul>
           <ul class="nytg-sort" style='position: absolute; left: 555px; top: 0px;'>
               <li id="reorderButton" style="display: none;">Re-order</li>
