'per capita' label

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ d3.select("#reorderButton")
                       "orig order" : "Re-order";
     d3.select(this).text(buttonText);
 
-    //Re-order Scope1/GDP-PPP according to Scope1/capita    
+    //Re-order Scope1/GDP according to Scope1/capita    
     emissionsBarChart("groupEurope", "#barChart_EU");
     emissionsBarChart("groupUSAAusNZ", "#barChart_USACanAusNZ");
     emissionsBarChart("groupAfricaAsia", "#barChart_AfricaAsia");
