--- a/index.html
+++ b/index.html
@@ -92,36 +92,36 @@
 
         <!--barChart sub-rows-->
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-7">
             <div class="barChartTitle">Europe</div>
             <div id="barChart_EU"></div>
           </div>
-          <div class="col-lg-6">
-            <div class="barChartTitle">Latin America</div>
-            <div id="barChart_LatinAmer"></div>
+          <div class="col-lg-5">
+            <div class="barChartTitle">Asia</div>
+            <div id="barChart_Asia"></div>
           </div> 
         </div>
 
         <div class="row">
-          <div class="col-lg-8">
+          <div class="col-lg-12">
             <div class="barChartTitle">North America (USA &#183; Canada)</div>
             <div id="barChart_NAmer"></div>
-          </div>
-          <div class="col-lg-4">
-            <div class="barChartTitle">Oceania (Aus &#183; NZ)</div>
-            <div id="barChart_Oceania"></div>
           </div>
         </div> <!-- ./sub-row USA chart -->
 
 
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-3">
+            <div class="barChartTitle">Aus &#183; NZ</div>
+            <div id="barChart_Oceania"></div>
+          </div>
+          <div class="col-lg-3">
             <div class="barChartTitle">Africa</div>
             <div id="barChart_Africa"></div>
           </div>
           <div class="col-lg-6">
-            <div class="barChartTitle">Asia</div>
-            <div id="barChart_Asia"></div>
+            <div class="barChartTitle">Latin America</div>
+            <div id="barChart_LatinAmer"></div>
           </div> 
         </div> 
 
@@ -265,10 +265,10 @@ d3.tsv("data/cityApp_attributes.tsv", function(ghg) {
   setupData(ghg);
   drawMap();
   emissionsBarChart("groupEurope", "#barChart_EU");
-  // emissionsBarChart("groupNAmer", "#barChart_NAmer");
+  emissionsBarChart("groupNAmer", "#barChart_NAmer");
   emissionsBarChart("groupOceania", "#barChart_Oceania");
-  // emissionsBarChart("groupAfrica", "#barChart_Africa");
-  // emissionsBarChart("groupAsia", "#barChart_Asia");
+  emissionsBarChart("groupAfrica", "#barChart_Africa");
+  emissionsBarChart("groupAsia", "#barChart_Asia");
   emissionsBarChart("groupLatinAmer", "#barChart_LatinAmer");
 });
 
@@ -536,7 +536,6 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
   // Extract scaled emissions data for given region
   // Omit cities for which GDP-PPP is missing
   emissions_scaled = sortByRegion(geogroup_name, this_dim);
-  console.log("this_dim: ", this_dim)
   
   // Sort columns
   emissions_scaled.sort((a, b) => d3.descending(a[this_dim], b[this_dim]));
